temp save before exploring older version

--- a/site/admin.html
+++ b/site/admin.html
@@ -49,11 +49,27 @@
         <div class="admin-metrics">
           <div class="metric-card card">
             <span class="metric-value" data-count-submissions>0</span>
-            <span class="metric-label">Submissions</span>
+            <span class="metric-label">Total submissions</span>
           </div>
           <div class="metric-card card">
-            <span class="metric-value" data-count-passwords>0</span>
-            <span class="metric-label">Password events</span>
+            <span class="metric-value" data-count-users data-count-passwords>0</span>
+            <span class="metric-label">Active accounts</span>
+          </div>
+          <div class="metric-card card">
+            <span class="metric-value" data-count-waitlist>0</span>
+            <span class="metric-label">Waitlist</span>
+          </div>
+          <div class="metric-card card">
+            <span class="metric-value" data-count-contacts>0</span>
+            <span class="metric-label">Contact requests</span>
+          </div>
+          <div class="metric-card card">
+            <span class="metric-value" data-count-pilot>0</span>
+            <span class="metric-label">Pilot requests</span>
+          </div>
+          <div class="metric-card card">
+            <span class="metric-value" data-count-investor>0</span>
+            <span class="metric-label">Investor interest</span>
           </div>
           <div class="metric-card card">
             <span class="metric-value" data-count-audit>0</span>
