--- a/site/app/cameras/configure.html
+++ b/site/app/cameras/configure.html
@@ -128,7 +128,7 @@
   <main>
     <section style="background: linear-gradient(135deg, rgba(13, 110, 253, 0.08), rgba(13, 202, 240, 0.05)); border-bottom: 1px solid var(--line);">
       <div class="wrap">
-        <div style="padding: clamp(var(--space-5), 8vw, var(--space-7)) 0;">
+        <div style="padding: clamp(24px, 3vw, 32px) 0;">
           <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: var(--space-4);">
             <div>
               <p style="font-size: 0.875rem; font-weight: 600; color: var(--accent-color); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: var(--space-2);">Configuration</p>
@@ -163,7 +163,7 @@
 
         <!-- Basic Settings Tab -->
         <div class="config-tab-content active" data-content="basic">
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <form id="basic-config-form"
                   data-endpoint="/app/cameras/configure"
                   data-method="PATCH"
@@ -209,7 +209,7 @@
 
         <!-- Patrol Routes Tab -->
         <div class="config-tab-content" data-content="patrol">
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div class="config-section">
               <h3>Patrol Routes</h3>
               <p style="color: var(--mute); margin-bottom: var(--space-4); line-height: 1.7;">
@@ -274,7 +274,7 @@
 
         <!-- Detection Zones Tab -->
         <div class="config-tab-content" data-content="zones">
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div class="config-section">
               <h3>Detection Zones</h3>
               <p style="color: var(--mute); margin-bottom: var(--space-4); line-height: 1.7;">
@@ -309,7 +309,7 @@
 
         <!-- Privacy Tab -->
         <div class="config-tab-content" data-content="privacy">
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div class="config-section">
               <h3>Privacy Zones</h3>
               <p style="color: var(--mute); margin-bottom: var(--space-4); line-height: 1.7;">
@@ -346,7 +346,7 @@
 
         <!-- Alerts Tab -->
         <div class="config-tab-content" data-content="alerts">
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div class="config-section">
               <h3>Alert Preferences</h3>
               <div class="form-field" style="margin-bottom: var(--space-4);">
@@ -389,7 +389,7 @@
 
         <!-- Network Tab -->
         <div class="config-tab-content" data-content="network">
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div class="config-section">
               <h3>Network Configuration</h3>
               <div class="form-field" style="margin-bottom: var(--space-4);">
@@ -433,7 +433,7 @@
 
         <!-- Advanced Tab -->
         <div class="config-tab-content" data-content="advanced">
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div class="config-section">
               <h3>Calibration</h3>
               <p style="color: var(--mute); margin-bottom: var(--space-4); line-height: 1.7;">
