--- a/site/solutions/retail.html
+++ b/site/solutions/retail.html
@@ -21,10 +21,10 @@
   <main>
     <section style="background: linear-gradient(135deg, rgba(13, 110, 253, 0.08), rgba(13, 202, 240, 0.05)); border-bottom: 1px solid var(--line);">
       <div class="wrap">
-        <div style="text-align: center; padding: clamp(var(--space-5), 8vw, var(--space-7)) 0;">
+        <div style="text-align: center; padding: clamp(24px, 3vw, 32px) 0;">
           <p style="font-size: 0.875rem; font-weight: 600; color: var(--accent-color); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: var(--space-2);">Solutions</p>
           <h1>Retail Security</h1>
-          <p style="max-width: 60ch; margin: 0 auto; color: var(--mute); font-size: 1.125rem; line-height: 1.7; margin-bottom: var(--space-5);">
+          <p style="max-width: 60ch; margin: 0 auto; color: var(--mute); font-size: 1.125rem; line-height: 1.7; margin-bottom: clamp(16px, 2vw, 20px);">
             Protect retail locations with intelligent surveillance that adapts to store layouts and customer traffic
           </p>
           <img src="../Image/camera_image.png" alt="Orbsurv camera for retail security" class="camera-hero-image" style="max-width: 500px; margin: 0 auto;" loading="lazy">
@@ -34,8 +34,8 @@
 
     <section class="section">
       <div class="wrap">
-        <div class="grid grid-2" style="gap: var(--space-5); margin-bottom: var(--space-7);">
-          <div class="card" style="padding: var(--space-5);">
+        <div class="grid grid-2" style="gap: clamp(16px, 2vw, 24px); margin-bottom: clamp(24px, 3vw, 32px);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div style="width: 64px; height: 64px; display: flex; align-items: center; justify-content: center; border-radius: 16px; background: color-mix(in srgb, var(--accent-color) 15%, transparent); margin-bottom: var(--space-4);">
               <i class="fa-solid fa-store" style="font-size: 2rem; color: var(--accent-color);"></i>
             </div>
@@ -48,7 +48,7 @@
             </div>
           </div>
 
-          <div class="card" style="padding: var(--space-5);">
+          <div class="card" style="padding: clamp(16px, 2vw, 20px);">
             <div style="width: 64px; height: 64px; display: flex; align-items: center; justify-content: center; border-radius: 16px; background: color-mix(in srgb, var(--accent-color) 15%, transparent); margin-bottom: var(--space-4);">
               <i class="fa-solid fa-user-shield" style="font-size: 2rem; color: var(--accent-color);"></i>
             </div>
@@ -62,7 +62,7 @@
           </div>
         </div>
 
-        <div class="card" style="padding: var(--space-5); margin-bottom: var(--space-6);">
+        <div class="card" style="padding: clamp(16px, 2vw, 20px); margin-bottom: clamp(24px, 3vw, 32px);">
           <h2 style="margin-bottom: var(--space-4); font-size: 1.75rem;">Key Benefits for Retail</h2>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: var(--space-4);">
             <div>
@@ -104,9 +104,9 @@
           </div>
         </div>
 
-        <div class="card" style="padding: var(--space-5);">
+        <div class="card" style="padding: clamp(16px, 2vw, 20px);">
           <h2 style="margin-bottom: var(--space-4); font-size: 1.75rem;">Ready to Secure Your Retail Locations?</h2>
-          <p style="color: var(--mute); line-height: 1.7; margin-bottom: var(--space-5);">
+          <p style="color: var(--mute); line-height: 1.7; margin-bottom: clamp(16px, 2vw, 20px);">
             Contact us to discuss how Orbsurv can protect your retail stores and reduce security costs.
           </p>
           <div style="display: flex; gap: var(--space-3); flex-wrap: wrap;">
